setup_phase1.out
=== Phase 1: GPU GEMM Benchmarking Setup ===

✓ CUDA found: 12.8

Step 1: Checking benchmark files...
✓ All required files present

Step 2: Setting up Python environment...
Requirement already satisfied: pandas in /home/sz4972/.local/lib/python3.12/site-packages (2.3.3)
Requirement already satisfied: matplotlib in /home/sz4972/.local/lib/python3.12/site-packages (3.10.7)
Requirement already satisfied: numpy in /ext3/miniforge3/envs/test/lib/python3.12/site-packages (2.3.4)
Requirement already satisfied: seaborn in /home/sz4972/.local/lib/python3.12/site-packages (0.13.2)
Requirement already satisfied: python-dateutil>=2.8.2 in /home/sz4972/.local/lib/python3.12/site-packages (from pandas) (2.9.0.post0)
Requirement already satisfied: pytz>=2020.1 in /home/sz4972/.local/lib/python3.12/site-packages (from pandas) (2025.2)
Requirement already satisfied: tzdata>=2022.7 in /home/sz4972/.local/lib/python3.12/site-packages (from pandas) (2025.2)
Requirement already satisfied: contourpy>=1.0.1 in /home/sz4972/.local/lib/python3.12/site-packages (from matplotlib) (1.3.3)
Requirement already satisfied: cycler>=0.10 in /home/sz4972/.local/lib/python3.12/site-packages (from matplotlib) (0.12.1)
Requirement already satisfied: fonttools>=4.22.0 in /home/sz4972/.local/lib/python3.12/site-packages (from matplotlib) (4.60.1)
Requirement already satisfied: kiwisolver>=1.3.1 in /home/sz4972/.local/lib/python3.12/site-packages (from matplotlib) (1.4.9)
Requirement already satisfied: packaging>=20.0 in /ext3/miniforge3/envs/test/lib/python3.12/site-packages (from matplotlib) (25.0)
Requirement already satisfied: pillow>=8 in /ext3/miniforge3/envs/test/lib/python3.12/site-packages (from matplotlib) (12.0.0)
Requirement already satisfied: pyparsing>=3 in /home/sz4972/.local/lib/python3.12/site-packages (from matplotlib) (3.2.5)
Requirement already satisfied: six>=1.5 in /home/sz4972/.local/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)
✓ Python dependencies installed

Step 3: CUTLASS setup (non-interactive mode - skipping)...
Skipping CUTLASS setup. You can install it later.

Step 4: Building project...
-- The CXX compiler identification is GNU 13.3.0
-- The CUDA compiler identification is NVIDIA 12.8.93
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Detecting CUDA compiler ABI info
-- Detecting CUDA compiler ABI info - done
-- Check for working CUDA compiler: /usr/local/cuda/bin/nvcc - skipped
-- Detecting CUDA compile features
-- Detecting CUDA compile features - done
-- Found CUDAToolkit: /usr/local/cuda/targets/x86_64-linux/include (found version "12.8.93") 
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- === Build Configuration ===
-- CUDA Architectures: 75;80;86;89
-- cuBLAS: ENABLED
-- CUTLASS: OFF
-- ========================
-- Configuring done (5.3s)
-- Generating done (0.6s)
-- Build files have been written to: /scratch/sz4972/GEMM-Optimization/phase1/build
[ 25%] Building CUDA object CMakeFiles/benchmark_gemm.dir/benchmark_gemm.cu.o
[ 50%] Building CUDA object CMakeFiles/test.dir/src/test.cu.o
/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(78): error: class "cudaDeviceProp" has no member "sharedMemPerMultiProcessor"
      specs.shared_mem_per_multiprocessor = prop.sharedMemPerMultiProcessor;
                                                 ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(186): error: namespace "std" has no member "function"
      std::function<void(const Tensor<float>&, const Tensor<float>&, Tensor<float>&)> kernel,
           ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(186): error: expected a ")"
      std::function<void(const Tensor<float>&, const Tensor<float>&, Tensor<float>&)> kernel,
                   ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(190): warning #12-D: parsing restarts here after previous syntax error
      int bench_iters = 20)
                          ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(193): error: identifier "m" is undefined
      Tensor<float> A{m, k, true};
                      ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(193): error: identifier "k" is undefined
      Tensor<float> A{m, k, true};
                         ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(194): error: identifier "n" is undefined
      Tensor<float> B{k, n, true};
                         ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(201): error: identifier "warmup_iters" is undefined
      for (int i = 0; i < warmup_iters; i++) {
                          ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(202): error: identifier "kernel" is undefined
          kernel(A, B, C);
          ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(209): error: identifier "bench_iters" is undefined
      for (int i = 0; i < bench_iters; i++) {
                          ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(210): error: identifier "kernel" is undefined
          kernel(A, B, C);
          ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(213): error: identifier "bench_iters" is undefined
      float avg_ms = total_ms / bench_iters;
                                ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(235): error: identifier "specs" is undefined
      result.compute_efficiency = (result.gflops / specs.peak_fp32_tflops) / 10.0;
                                                   ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(312): error: too many arguments in function call
              auto lab1_result = benchmark_gemm("Lab-1 Tiled", op_mm<float>, m, n, k, specs);
                                                                             ^

/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu(317): error: too many arguments in function call
              auto cublas_result = benchmark_gemm("cuBLAS", cublas_gemm, m, n, k, specs);
                                                                         ^

14 errors detected in the compilation of "/scratch/sz4972/GEMM-Optimization/phase1/benchmark_gemm.cu".
make[2]: *** [CMakeFiles/benchmark_gemm.dir/build.make:77: CMakeFiles/benchmark_gemm.dir/benchmark_gemm.cu.o] Error 2
make[1]: *** [CMakeFiles/Makefile2:111: CMakeFiles/benchmark_gemm.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 75%] Linking CUDA executable test
[ 75%] Built target test
make: *** [Makefile:136: all] Error 2
